--- a/style.css
+++ b/style.css
@@ -3,14 +3,69 @@
     padding: 0;
 
 }
+
+
 body{
     font-family: 'Tiro Tamil', serif;
 font-family: 'Unna', serif;
+background-color: aliceblue;
+height: 100vh;
 }
+
+.wrapper span {
+    position: fixed;
+    bottom: -80px;
+    animation: animate 7s linear infinite;
+    font-size: 60px;
+    z-index: -1;
+}
+
+.wrapper span:nth-child(1){
+    left: 60px;
+    animation-delay: 0.6s;    
+}
+.wrapper span:nth-child(2){
+    left: 10%;
+    animation-delay: 3s;  
+}
+.wrapper span:nth-child(3){
+    left: 20%;
+    animation-delay: 2s;    
+}
+.wrapper span:nth-child(4){
+    left: 30%;
+    animation-delay: 5s;   
+}
+.wrapper span:nth-child(5){
+    left: 40%;
+    animation-delay: 1s;    
+}
+.wrapper span:nth-child(6){
+    left: 50%;
+    animation-delay: 7s;    
+}
+.wrapper span:nth-child(7){
+    left: 60%;
+    animation-delay: 6s;  
+}
+.wrapper span:nth-child(8){
+    left: 70%;
+    animation-delay: 8s;    
+}
+.wrapper span:nth-child(9){
+    left: 80%;
+    animation-delay: 6s;  
+}
+.wrapper span:nth-child(10){
+    left: 90%;
+    animation-delay: 4s;    
+}
+
 .navbar{
     background-color: #FD6565;
     padding: 10px;
 }
+
 .container{
     padding: 10px;
 
@@ -123,4 +178,18 @@ font-family: 'Unna', serif;
 }
 .popup-box textarea:focus{
     outline: none;
+}
+
+@keyframes animate{
+    0%{
+        transform: translateY(0);
+        opacity: 1;
+    }
+    60%{
+        opacity: 8;
+    }
+    100%{
+        transform: translateY(-800px) rotate(360deg);
+        opacity: 0;
+    }
 }
